RESOLVED FIXED 251888
Attribute change results in assertion failure checking for parent node for a parent less element.
https://bugs.webkit.org/show_bug.cgi?id=251888
Summary Attribute change results in assertion failure checking for parent node for a ...
Arunsundar Kannan
Reported 2023-02-07 15:30:40 PST
Created attachment 464898 [details] HTML for reproduction Attribute change results in assertion failure checking for parent node for a parent less element. ASSERTION FAILED: m_ptr /Users/arunsundarkannan/webkit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/RefPtr.h(83) : T &WTF::RefPtr<WebCore::ContainerNode>::operator*() const [T = WebCore::ContainerNode, _PtrTraits = WTF::RawPtrTraits<WebCore::ContainerNode>, _RefDerefTraits = WTF::DefaultRefDerefTraits<WebCore::ContainerNode>] 1 0x12f38c908 WTFCrash 2 0x144bf5714 WTFCrashWithInfo(int, char const*, char const*, int) 3 0x147d16748 WTF::RefPtr<WebCore::ContainerNode, WTF::RawPtrTraits<WebCore::ContainerNode>, WTF::DefaultRefDerefTraits<WebCore::ContainerNode> >::operator*() const 4 0x148288900 WebCore::HTMLSourceElement::parseAttribute(WebCore::QualifiedName const&, WTF::AtomString const&) 5 0x147d78248 WebCore::Element::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 6 0x147f0a380 WebCore::StyledElement::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 7 0x148288bec WebCore::HTMLSourceElement::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 8 0x147d87594 WebCore::Element::didModifyAttribute(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&) 9 0x147d773c8 WebCore::Element::setAttributeInternal(unsigned int, WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::Element::SynchronizationOfLazyAttribute) 10 0x147d77920 WebCore::Element::setAttributeWithoutSynchronization(WebCore::QualifiedName const&, WTF::AtomString const&) 11 0x1455d85bc WebCore::setJSHTMLSourceElement_typeSetter(JSC::JSGlobalObject&, WebCore::JSHTMLSourceElement&, JSC::JSValue)::'lambda'()::operator()() const
Attachments
HTML for reproduction (774 bytes, text/html)
2023-02-07 15:30 PST, Arunsundar Kannan
no flags
Arunsundar Kannan
Comment 1 2023-02-07 16:01:37 PST
Arunsundar Kannan
Comment 2 2023-02-07 16:01:47 PST
EWS
Comment 3 2023-02-09 11:19:56 PST
Committed 260072@main (0ba2b3fa758f): <https://commits.webkit.org/260072@main> Reviewed commits have been landed. Closing PR #9783 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.