Cherry-pick 0ba2b3fa758f. rdar://problem/104819364

Attribute change results in assertion failure checking for parent node for a parent less element.
    https://bugs.webkit.org/show_bug.cgi?id=251888
    rdar://104819364

    Reviewed by Ryosuke Niwa.

    This change sets 'm_shouldCallSourcesChanged' to false after the parentNode is disassociated from the Node in question. This will avoid the call that leads to the crash.

    * LayoutTests/fast/html/parent-less-source-crash-type-change-expected.txt: Added.
    * LayoutTests/fast/html/parent-less-source-crash-type-change.html: Added.
    * Source/WebCore/dom/ContainerNodeAlgorithms.cpp:
    (WebCore::removeDetachedChildrenInContainer):
    * Source/WebCore/html/HTMLSourceElement.cpp:
    (WebCore::HTMLSourceElement::setShouldCallSourcesChanged):
    * Source/WebCore/html/HTMLSourceElement.h:

    Canonical link: https://commits.webkit.org/260072@main

Canonical link: https://commits.webkit.org/259548.297@safari-7615-branch